fix: blur z-index blocking buttons on android

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -153,6 +153,7 @@ body {
     filter: blur(90px);
     opacity: 0.5;
     pointer-events: none;
+    z-index: 0;
 }
 
 .blur1 {
